modify whole DB