@@ -11,7 +11,6 @@ import org.jooq.impl.DSL;
 import org.springframework.stereotype.Repository;
 
 import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
 import java.util.List;
 
 @Repository
@@ -23,51 +22,49 @@ public class FlightRepository {
         this.dsl = dsl;
     }
 
-    // Save a new flight
+    // Lưu một chuyến bay mới
     public Flight save(Flight flight) {
         FlightRecord record = dsl.newRecord(Tables.FLIGHT);
         record.from(flight); // Map POJO to Record
-        record.store();      // Save to DB
-        return record.into(Flight.class); // Convert back to POJO
+        record.store();      // Lưu vào cơ sở dữ liệu
+        return record.into(Flight.class); // Chuyển lại thành POJO
     }
 
-    // Find a flight by ID
-    public Flight findById(String id) {
-        FlightRecord record = dsl
-                .selectFrom(Tables.FLIGHT)
-                .where(Tables.FLIGHT.FLIGHT_ID.eq(id))
-                .fetchOne();
-        assert record != null;
-        return record.into(Flight.class); // Convert Record to POJO
+    // Tìm chuyến bay theo flightId
+    public Flight findByFlightId(String flightId) {
+        return dsl.selectFrom(Tables.FLIGHT)
+                .where(Tables.FLIGHT.FLIGHT_ID.eq(flightId))
+                .fetchOneInto(Flight.class);
     }
 
-    // Find all flights with pagination
+    // Tìm tất cả các chuyến bay
     public List<Flight> findAll() {
         return dsl.selectFrom(Tables.FLIGHT)
-                .fetchInto(Flight.class); // Convert fetched records to POJOs
+                .orderBy(Tables.FLIGHT.SCHEDULED_TIME)
+                .fetchInto(Flight.class);
     }
 
-    // Delete a flight by ID
-    public boolean deleteById(String flightId) {
+    // Xóa một chuyến bay theo flightId
+    public boolean deleteByFlightId(String flightId) {
         int rowsAffected = dsl.deleteFrom(Tables.FLIGHT)
                 .where(Tables.FLIGHT.FLIGHT_ID.eq(flightId))
                 .execute();
-        return rowsAffected > 0; // Return true if a record was deleted
+        return rowsAffected > 0;
     }
 
-    // Update an existing flight
+    // Cập nhật thông tin chuyến bay
     public Flight update(String flightId, Flight flight) {
         FlightRecord record = dsl.newRecord(Tables.FLIGHT);
-        record.from(flight); // Map POJO to Record
+        record.from(flight);
         int rowsAffected = dsl.update(Tables.FLIGHT)
                 .set(record)
                 .where(Tables.FLIGHT.FLIGHT_ID.eq(flightId))
                 .execute();
 
         if (rowsAffected > 0) {
-            return findById(flightId); // Return the updated flight as a POJO
+            return findByFlightId(flightId);
         } else {
-            throw new IllegalStateException("Flight with ID " + flightId + " not found.");
+            throw new IllegalStateException("Không tìm thấy chuyến bay với flightId: " + flightId);
         }
     }
 
@@ -76,60 +73,57 @@ public class FlightRepository {
         return dsl.fetchCount(Tables.FLIGHT); // Count the total number of rows in the table
     }
 
-    // Search for flights based on filters
+    // Tìm kiếm chuyến bay theo bộ lọc
     public List<Flight> search(List<SearchFlightRequest> filters) {
-        Condition condition = buildCondition(filters); // Build jOOQ condition from filters
+        Condition condition = buildCondition(filters);
         return dsl.selectFrom(Tables.FLIGHT)
                 .where(condition)
-                .fetchInto(Flight.class); // Fetch results into POJOs
+                .fetchInto(Flight.class);
     }
 
-    // Build a jOOQ condition from a list of filters
     public long countSearch(List<SearchFlightRequest> filters) {
         Condition condition = buildCondition(filters); // Build jOOQ condition from filters
         return dsl.fetchCount(dsl.selectFrom(Tables.FLIGHT).where(condition));
     }
 
-    // Build jOOQ Condition from Filters
+    // Xây dựng điều kiện tìm kiếm từ bộ lọc
     private Condition buildCondition(List<SearchFlightRequest> filters) {
         if (filters == null || filters.isEmpty()) {
-            return DSL.noCondition(); // Return no condition if filters are empty
+            return DSL.noCondition();
         }
 
-        Condition condition = createCondition(filters.removeFirst());
+        Condition condition = createCondition(filters.remove(0));
         for (SearchFlightRequest filter : filters) {
             condition = condition.and(createCondition(filter));
         }
         return condition;
     }
 
-    // Create jOOQ Condition from Single Filter
+    // Tạo điều kiện tìm kiếm từ một bộ lọc
     private Condition createCondition(SearchFlightRequest filter) {
-        // Determine the field and its expected type dynamically
-        Field<Object> field = Tables.FLIGHT.field(filter.getKey(), Object.class); // Generic Field
+        Field<Object> field = Tables.FLIGHT.field(filter.getKey(), Object.class);
         if (field == null) {
             throw new IllegalArgumentException("Invalid field key: " + filter.getKey());
         }
-        Object castedValue = castToRequiredType(filter.getKey(), filter.getValue());
+        Object value = castToRequiredType(filter.getKey(), filter.getValue());
 
         return switch (filter.getOperator()) {
-            case ":" -> field.eq(castedValue); // Equal condition
-            case "<" -> field.lt((Comparable<?>) castedValue); // Less than condition
-            case ">" -> field.gt((Comparable<?>) castedValue); // Greater than condition
-            case "<=" -> field.le((Comparable<?>) castedValue); // Less than or equal condition
-            case ">=" -> field.ge((Comparable<?>) castedValue); // Greater than or equal condition
+            case ":" -> field.eq(value);
+            case "<" -> field.lt(value);
+            case ">" -> field.gt(value);
+            case "<=" -> field.le(value);
+            case ">=" -> field.ge(value);
             default -> throw new IllegalArgumentException("Unsupported operator: " + filter.getOperator());
         };
     }
 
-    // Cast Values to Required Type for jOOQ Condition
+    // Chuyển kiểu dữ liệu theo yêu cầu
     private Object castToRequiredType(String key, String value) {
         if (value == null) return null;
         return switch (key) {
-            case "departure_time", "return_time" ->
-                    LocalDateTime.parse(value, DateTimeFormatter.ISO_DATE_TIME); // Cast to LocalDateTime
-            case "duration" -> Integer.parseInt(value); // Example: Cast to Integer if needed
-            default -> value; // Assume string for other fields
+            case "scheduled_time" -> LocalDateTime.parse(value);
+            case "price_E", "price_B" -> Long.parseLong(value);
+            default -> value;
         };
     }
 }
